# numd

./: .gitignore  CMakeLists.txt  Homework.sln  Homework.userprefs  HomeworkWin.sln  LICENSE  Numd.sln  NumdWin.sln  README.md  README.txt  dub.json  evenexNumdThoughts.d  meson.build  meson_options.txt
Homework1/: Homework1.dproj  Homework1.visualdproj
Homework1/Writeup/: Convergance_10_20.eps  Convergance_1_40.eps  Convergance_20_90.eps  HW1Writeup.dvi  HW1Writeup.tex
Homework2/: Homework2.visualdproj
Homework2/Writeup/: DerivativeError.eps  Rau_HW2Writeup.tex
Homework3/Writeup/: BfgsDrag3.eps  BfgsRose.eps  ConjGradFRDrag3.eps  ConjGradPRRose.eps  DimensionEffectMinor.eps  DimensionEffectTime.eps  Rau_HW3Writeup.tex  SteepestRose.eps
Homework4/: Homework4.dproj  Homework4.visualdproj  main.d
Homework4/Writeup/: Opt1.eps  Opt2.eps
Homework5/: Homework5.dproj
Homework5/Writeup/: ParticleSwarmDragError2.eps  ParticleSwarmDragPoints2.eps  Rau_HW5Writeup.dvi  Rau_HW5Writeup.tex
LinearAlgebra/: LinearAlgebra.dproj  Matrix.d  Vector.d
MDOL/: BracketAndZoom.d  Complex.d  FiniteDifference.d  MDOL.visualdproj  RootFinder.d  SteepestDescent.d
Optimization/: ArrayOps.d  BfgsNewton.d  BracketAndZoom.d  ComplexStep.d  ConjugateGradient.d  Derivative.d  FiniteDifference.d  GoldenSearch.d  Gradient.d  InteriorPenalty.d  MatrixOps.d  NewtonRoot.d  ObjectiveFunction.d  Optimization.dproj  Optimizer.d  ParticleSwarmOptimizer.d  SQP.d  SecantRoot.d  SteepestDescent.d
Plotting/: Color.d  FigPlot.d  Line.d  Plotting.dproj  Plotting.visualdproj
examples/matrix/: dub.json
numd/: utility.d
numd/calculus/: integration.d  rk45.d
numd/linearalgebra/: LinearAlgebra.dproj  Vector.d  matrix.d
numd/optimization/: ArrayOps.d  BfgsNewton.d  BracketAndZoom.d  Complex.d  ComplexStep.d  ConjugateGradient.d  Derivative.d  FiniteDifference.d  GoldenSearch.d  Gradient.d  InteriorPenalty.d  MatrixOps.d  NewtonRoot.d  ObjectiveFunction.d  Optimization.dproj  Optimizer.d  ParticleSwarmOptimizer.d  RootFinder.d  SQP.d  SecantRoot.d  SteepestDescent.d
source/: utility.d
source/linearalgebra/: matrix.d  matrixarray.d
(+49 files in other folders)
